--- a/PropertyRenting.Presentation/appsettings.json
+++ b/PropertyRenting.Presentation/appsettings.json
@@ -23,7 +23,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ReadDBConnection": "Server=HassanMohamed\\SQLEXPRESS;Database=PropertyRenting_DB;User Id=sa;Password=11;",
-    "WriteDBConnection": "Server=HassanMohamed\\SQLEXPRESS;Database=PropertyRenting_DB;User Id=sa;Password=11;"
+    "ReadDBConnection": "Server=HASSANMOHAMED;Database=PropertyRenting_DB;User Id=sa;Password=11;",
+    "WriteDBConnection": "Server=HASSANMOHAMED;Database=PropertyRenting_DB;User Id=sa;Password=11;"
   }
 }
